--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "devDependencies": {
     "@playwright/test": "^1.43.0",
     "@types/node": "^20.12.3"
+  },
+  "dependencies": {
+    "ajv": "^8.12.0",
+    "fs": "^0.0.1-security",
+    "genson-js": "^0.0.8"
   }
 }
